--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "paths": {
       "@/*": [
-        "src/*"
+        "01-src-分析src/*"
       ]
     },
     "lib": [
