--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "nanoid": "^5.1.5",
     "pubsub-js": "^1.9.5",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-resource": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
